--- a/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_pubcov/ACS_PubCov_Batch1-Copy4.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_pubcov/ACS_PubCov_Batch1-Copy4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "36397089",
+   "id": "fac73529",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "726976cb",
+   "id": "83a4fe7d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:35:19.738404Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5b25914a",
+   "id": "20b832ce",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:35:37.942410Z",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "376a6373",
+   "id": "e4913e21",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:32.626797Z",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "767f600c",
+   "id": "a42bb64c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:32.632181Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b0401020",
+   "id": "30b2ac2e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:32.642020Z",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85501f05",
+   "id": "653bf9d9",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e6ade4fb",
+   "id": "76255674",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:35.335196Z",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82713ddc",
+   "id": "eda617e2",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "12f55a0a",
+   "id": "c0558ff4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:35.358215Z",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b60ece6",
+   "id": "8981b6be",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f82ffc28",
+   "id": "3558fc0d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:36.349633Z",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d1a98924",
+   "id": "8d3cfff6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:36.680012Z",
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "29eb9d84",
+   "id": "e8b49b7a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:46.039502Z",
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec124baf",
+   "id": "30fd58e8",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c4d2fd17",
+   "id": "dec59a3d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:53.416248Z",
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "82e04f9b",
+   "id": "32856307",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:54.127684Z",
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a419ca80",
+   "id": "b93b3f97",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2faa6a9b",
+   "id": "3f625e00",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "dd2fdae8",
+   "id": "6ba54125",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:55.711376Z",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "74ba822b",
+   "id": "294ce2a4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:55.914187Z",
@@ -553,14 +553,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0372d4e2",
+   "id": "08bde85f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:29:59.790418Z",
@@ -572,7 +572,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:06:39 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 17:42:40 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -592,7 +592,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a13c374e4aea482fae4d823928134476",
+       "model_id": "618e85f7aa814bf5bacdb86f95767bda",
        "version_major": 2,
        "version_minor": 0
       },
@@ -607,7 +607,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:06:39 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 17:42:40 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -644,8 +644,8 @@
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
       "             8665,  6253],\n",
       "           dtype='int64')\n",
-      "2024/01/05, 15:06:39: Tuning LogisticRegression...\n",
-      "2024/01/05, 15:06:42: Tuning for LogisticRegression is finished [F1 score = 0.6461054962457752, Accuracy = 0.7001777777777778]\n",
+      "2024/01/05, 17:42:40: Tuning RandomForestClassifier...\n",
+      "2024/01/05, 17:44:48: Tuning for RandomForestClassifier is finished [F1 score = 0.6595474712978125, Accuracy = 0.7042666666666667]\n",
       "\n"
      ]
     },
@@ -653,14 +653,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:06:42 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2024-01-05 17:44:48 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44116c6d68ca4f41bb5c9675f70e0322",
+       "model_id": "c06ed65bd99b43dab84849e67868f321",
        "version_major": 2,
        "version_minor": 0
       },
@@ -681,7 +681,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ddc00061d8642b29895640219668f7a",
+       "model_id": "c0f78f2c83e145aa9b5627eab23bae53",
        "version_major": 2,
        "version_minor": 0
       },
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a0fe550",
+   "id": "a304f2b7",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "319c300c",
+   "id": "890ca5dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -740,14 +740,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92d2dd09",
+   "id": "9dbd51c9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:14.888610Z",
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63a8e258",
+   "id": "ec67525b",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "6f8379c3",
+   "id": "603ebdfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +792,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -802,14 +802,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c5825237",
+   "id": "7b3bc628",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:19.039982Z",
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc3d1eb4",
+   "id": "fd74beaf",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -846,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "2969cfe3",
+   "id": "bf60dab9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +854,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -864,14 +864,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c8b202d7",
+   "id": "646c3a24",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:24.538103Z",
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1718d43f",
+   "id": "91ab2e92",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "59704943",
+   "id": "ab819ec0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +916,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -926,14 +926,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "74e92d6b",
+   "execution_count": null,
+   "id": "98e2f938",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:29.050787Z",
@@ -945,7 +945,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:11:40 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 17:55:30 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -965,7 +965,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af31c897089843c7bfaf3299ae4e0aad",
+       "model_id": "a7b0bca59b874da78183307aad135101",
        "version_major": 2,
        "version_minor": 0
       },
@@ -980,9 +980,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:11:40 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 17:55:30 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n",
-      "2024-01-05 15:11:40 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "2024-01-05 17:55:30 experiment_interface.py INFO    : Models config is loaded from the input file\n",
       "INFO:root:Models config is loaded from the input file\n"
      ]
     },
@@ -1019,14 +1019,14 @@
       "            10637,   767, 10997,  6202,  4468,  8440, 10810, 11409,  3682,\n",
       "            12856, 14104],\n",
       "           dtype='int64')\n",
-      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/ROC/ROC_acs_pubcov/tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv\n",
-      "LogisticRegression:  {'C': 1, 'class_weight': None, 'dual': False, 'fit_intercept': True, 'intercept_scaling': 1, 'l1_ratio': None, 'max_iter': 1000, 'multi_class': 'auto', 'n_jobs': None, 'penalty': 'l2', 'random_state': 500, 'solver': 'newton-cg', 'tol': 0.0001, 'verbose': 0, 'warm_start': False}\n"
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/ROC/ROC_acs_pubcov/tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv\n",
+      "RandomForestClassifier:  {'bootstrap': True, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 40, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 100, 'n_jobs': None, 'oob_score': False, 'random_state': 500, 'verbose': 0, 'warm_start': False}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6396dc606c28433e829c799f8424bbe7",
+       "model_id": "d4c04126b06a436e8bd270fb0f859bb1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1047,7 +1047,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5188445cc3514a2aae65cb40afedeb4f",
+       "model_id": "d41220bca44248a38db3c9fa451b56ab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99744250",
+   "id": "b5869171",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1088,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "ed1e725c",
+   "id": "1a69d6e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,7 +1096,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1106,14 +1106,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0348e359",
+   "id": "e9afc8f3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:33.438196Z",
@@ -1142,7 +1142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4984bd9",
+   "id": "ddb38eac",
    "metadata": {},
    "outputs": [],
    "source": []
