--- a/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_pubcov/ACS_PubCov_Batch1-Copy5.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_pubcov/ACS_PubCov_Batch1-Copy5.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "56845faf",
+   "id": "165fdca0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "8f392222",
+   "id": "e3472f56",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:35:19.738404Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "4963b1df",
+   "id": "e2371277",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:35:37.942410Z",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c8a24a80",
+   "id": "9f94a8b0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:32.626797Z",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fb4c96cd",
+   "id": "c86fec81",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:32.632181Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b6e7f13a",
+   "id": "86cab58d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:32.642020Z",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dbd803f",
+   "id": "69b6bf74",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "72ebcf69",
+   "id": "e91ca805",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:35.335196Z",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d5bcd36",
+   "id": "bcad02d0",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "54d28b17",
+   "id": "ef28988c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:35.358215Z",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bea8f09",
+   "id": "082ebe7f",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "40221cb7",
+   "id": "fa96db98",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:36.349633Z",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9b56a426",
+   "id": "05fbd21c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:36.680012Z",
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8ddb8282",
+   "id": "22e11168",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:46.039502Z",
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0901882",
+   "id": "6b36acc8",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "968ef3d2",
+   "id": "9bef45d1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:53.416248Z",
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "51f25b12",
+   "id": "3d1050d5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:54.127684Z",
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d254f85",
+   "id": "ac1cf579",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c99ab76e",
+   "id": "fce123b4",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "aabc3f22",
+   "id": "9a9e493f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:55.711376Z",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0f85d660",
+   "id": "fea1de5f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:55.914187Z",
@@ -553,14 +553,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "205a6188",
+   "id": "83701d57",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:29:59.790418Z",
@@ -572,7 +572,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:06:39 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 17:42:40 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -592,7 +592,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a13c374e4aea482fae4d823928134476",
+       "model_id": "618e85f7aa814bf5bacdb86f95767bda",
        "version_major": 2,
        "version_minor": 0
       },
@@ -607,7 +607,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:06:39 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 17:42:40 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -644,8 +644,8 @@
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
       "             8665,  6253],\n",
       "           dtype='int64')\n",
-      "2024/01/05, 15:06:39: Tuning LogisticRegression...\n",
-      "2024/01/05, 15:06:42: Tuning for LogisticRegression is finished [F1 score = 0.6461054962457752, Accuracy = 0.7001777777777778]\n",
+      "2024/01/05, 17:42:40: Tuning RandomForestClassifier...\n",
+      "2024/01/05, 17:44:48: Tuning for RandomForestClassifier is finished [F1 score = 0.6595474712978125, Accuracy = 0.7042666666666667]\n",
       "\n"
      ]
     },
@@ -653,14 +653,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:06:42 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2024-01-05 17:44:48 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44116c6d68ca4f41bb5c9675f70e0322",
+       "model_id": "c06ed65bd99b43dab84849e67868f321",
        "version_major": 2,
        "version_minor": 0
       },
@@ -681,7 +681,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ddc00061d8642b29895640219668f7a",
+       "model_id": "c0f78f2c83e145aa9b5627eab23bae53",
        "version_major": 2,
        "version_minor": 0
       },
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd5419a8",
+   "id": "8ba8f519",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f6e00c2",
+   "id": "dc883566",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -740,14 +740,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "776d07f4",
+   "id": "b06420bc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:14.888610Z",
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9402cc66",
+   "id": "56df4f56",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "e69a606a",
+   "id": "696923b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +792,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -802,14 +802,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "408964f3",
+   "id": "ed608683",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:19.039982Z",
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c38f50ba",
+   "id": "3c8938dc",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -846,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "6d1e3426",
+   "id": "af28a1d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +854,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -864,14 +864,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e36c0446",
+   "id": "f5fb7852",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:24.538103Z",
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c341a853",
+   "id": "3f841e89",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "34c8dc48",
+   "id": "331cded3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +916,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -926,14 +926,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a2ba1193",
+   "id": "d65b4820",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:29.050787Z",
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7ba2e3b",
+   "id": "ac067ca0",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -970,7 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6545342f",
+   "id": "8134596c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -978,7 +978,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -988,14 +988,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "7d34c2cd",
+   "execution_count": null,
+   "id": "5dbf4d75",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:33.438196Z",
@@ -1007,7 +1007,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:12:20 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 17:55:46 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -1027,7 +1027,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbda1a416a65472689d6fe40ecb3f248",
+       "model_id": "7e1d915b546a4220a8ff97eaf13dd427",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1042,9 +1042,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:12:20 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 17:55:47 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n",
-      "2024-01-05 15:12:20 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "2024-01-05 17:55:47 experiment_interface.py INFO    : Models config is loaded from the input file\n",
       "INFO:root:Models config is loaded from the input file\n"
      ]
     },
@@ -1081,14 +1081,14 @@
       "             9794,  7142, 14347,  6387,  2917,   317,  9085,  5821, 11007,\n",
       "             8142,  3719],\n",
       "           dtype='int64')\n",
-      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/ROC/ROC_acs_pubcov/tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv\n",
-      "LogisticRegression:  {'C': 1, 'class_weight': None, 'dual': False, 'fit_intercept': True, 'intercept_scaling': 1, 'l1_ratio': None, 'max_iter': 1000, 'multi_class': 'auto', 'n_jobs': None, 'penalty': 'l2', 'random_state': 600, 'solver': 'newton-cg', 'tol': 0.0001, 'verbose': 0, 'warm_start': False}\n"
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/ROC/ROC_acs_pubcov/tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv\n",
+      "RandomForestClassifier:  {'bootstrap': True, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 40, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 100, 'n_jobs': None, 'oob_score': False, 'random_state': 600, 'verbose': 0, 'warm_start': False}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eeb72193894f4adb8dda54275d514fc7",
+       "model_id": "6d13b1d2712341eaad43c18b4d3504e8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1109,7 +1109,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "356deef1d62d42ab9b0d19e8b82bef18",
+       "model_id": "9228d66789ce497e8e419cc1b359ef37",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1142,7 +1142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "273d0cdc",
+   "id": "e55e24af",
    "metadata": {},
    "outputs": [],
    "source": []
