--- a/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_pubcov/ACS_PubCov_Batch1.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_pubcov/ACS_PubCov_Batch1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c6673d63",
+   "id": "e2ea69c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "10f6b49f",
+   "id": "324b7fee",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:35:19.738404Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f7a87d8e",
+   "id": "04e1423e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:35:37.942410Z",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c2ddd4de",
+   "id": "5715d8e1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:32.626797Z",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "97673ae2",
+   "id": "7e1978fa",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:32.632181Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bd9082f0",
+   "id": "956f1a1c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:32.642020Z",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35d3a0d0",
+   "id": "37444f89",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fa373ad1",
+   "id": "6a50f1c5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:35.335196Z",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72426982",
+   "id": "2b33a962",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8b0969e6",
+   "id": "3000873f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:35.358215Z",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c3e1853",
+   "id": "41682e6a",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "44b3f49a",
+   "id": "c79f273d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:36.349633Z",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "006654ce",
+   "id": "af04c78f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:36.680012Z",
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9be8f0d3",
+   "id": "9ea2e88c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:46.039502Z",
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe3a8c21",
+   "id": "3531828d",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "68fbb26f",
+   "id": "141db113",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:53.416248Z",
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "583b12f2",
+   "id": "fabd5f62",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:54.127684Z",
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f463534",
+   "id": "7c03fa3d",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a295d2be",
+   "id": "3e9c577a",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "61f2209b",
+   "id": "dc78450e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:55.711376Z",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "22e7c407",
+   "id": "ae66b10c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:55.914187Z",
@@ -553,14 +553,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "21f364f7",
+   "execution_count": null,
+   "id": "9684372a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:29:59.790418Z",
@@ -572,7 +572,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:06:39 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 17:42:40 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -592,7 +592,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a13c374e4aea482fae4d823928134476",
+       "model_id": "618e85f7aa814bf5bacdb86f95767bda",
        "version_major": 2,
        "version_minor": 0
       },
@@ -607,7 +607,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:06:39 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 17:42:40 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -644,8 +644,8 @@
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
       "             8665,  6253],\n",
       "           dtype='int64')\n",
-      "2024/01/05, 15:06:39: Tuning LogisticRegression...\n",
-      "2024/01/05, 15:06:42: Tuning for LogisticRegression is finished [F1 score = 0.6461054962457752, Accuracy = 0.7001777777777778]\n",
+      "2024/01/05, 17:42:40: Tuning RandomForestClassifier...\n",
+      "2024/01/05, 17:44:48: Tuning for RandomForestClassifier is finished [F1 score = 0.6595474712978125, Accuracy = 0.7042666666666667]\n",
       "\n"
      ]
     },
@@ -653,14 +653,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:06:42 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2024-01-05 17:44:48 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44116c6d68ca4f41bb5c9675f70e0322",
+       "model_id": "c06ed65bd99b43dab84849e67868f321",
        "version_major": 2,
        "version_minor": 0
       },
@@ -681,7 +681,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ddc00061d8642b29895640219668f7a",
+       "model_id": "c0f78f2c83e145aa9b5627eab23bae53",
        "version_major": 2,
        "version_minor": 0
       },
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d989937",
+   "id": "6073cdfc",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76dea824",
+   "id": "8c3b46ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -740,14 +740,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62d5019c",
+   "id": "18face6d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:14.888610Z",
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4e22531",
+   "id": "bcd8fee4",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d4f8c4d1",
+   "id": "3f9ab43c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +792,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -802,14 +802,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d98c5ace",
+   "id": "ef3e6f28",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:19.039982Z",
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f05a1707",
+   "id": "c574669b",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -846,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "604427d8",
+   "id": "64ec302f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +854,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -864,14 +864,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d222cec3",
+   "id": "6c3b9c57",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:24.538103Z",
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a12e625",
+   "id": "2a376d40",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a784dc6a",
+   "id": "9f9a82a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +916,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -926,14 +926,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "24889fea",
+   "id": "ec171a8b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:29.050787Z",
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4c9f96c",
+   "id": "231cd5d8",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -970,7 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "d046de6a",
+   "id": "a73ce623",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -978,7 +978,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -988,14 +988,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e464464c",
+   "id": "7f3d51e0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:33.438196Z",
@@ -1024,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ab1c568",
+   "id": "20d5861e",
    "metadata": {},
    "outputs": [],
    "source": []
