--- a/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_income/ACS_Income_Batch3.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_income/ACS_Income_Batch3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7990afcf",
+   "id": "fff3e11b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7aa4b824",
+   "id": "51eff2ea",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:06:47.913158Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "93682fcd",
+   "id": "a4d6c518",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:07:04.695699Z",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d5d81ae4",
+   "id": "bd18bef3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:06.421538Z",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0fa32adb",
+   "id": "52e7b298",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:06.434085Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "594d53aa",
+   "id": "bfa422b4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:06.442873Z",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1880b6a2",
+   "id": "84601b8e",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ecfb7250",
+   "id": "d3129f55",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:26.384376Z",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4db2e81",
+   "id": "8b6b1a81",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "414925fc",
+   "id": "ead2e7f2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:27.955337Z",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00513188",
+   "id": "f47f9302",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d4ff3c94",
+   "id": "e3a9ca92",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:29.314687Z",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c60bb952",
+   "id": "d9ab77de",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:30.488092Z",
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "863ff9c0",
+   "id": "4241be81",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:41.124722Z",
@@ -254,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  cf4275e8-0fe0-4fff-aea0-318f8caec796\n"
+      "Current session uuid:  426f4b41-5b22-4118-b5c8-15a0ab4aa18f\n"
      ]
     }
    ],
@@ -263,14 +263,14 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "#     'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': 'cf4275e8-0fe0-4fff-aea0-318f8caec796',\n",
+    "    'session_uuid': '426f4b41-5b22-4118-b5c8-15a0ab4aa18f',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f9c07798",
+   "id": "7b91b67a",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ad342d5b",
+   "id": "b5cb6027",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:44.213695Z",
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ca6b9fca",
+   "id": "653fa59e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:46.796185Z",
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec714701",
+   "id": "0e1bbaa6",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "407a6581",
+   "id": "464167d3",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b7b63cba",
+   "id": "a0e7bb32",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:50.023445Z",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "64930c42",
+   "id": "57c709f5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:51.808311Z",
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f657a8b",
+   "id": "2f45bbca",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:45:53.001285Z",
@@ -511,7 +511,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 17:55:45 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 17:38:23 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -523,7 +523,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[True]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'cf4275e8-0fe0-4fff-aea0-318f8caec796'}\n",
+      " 'session_uuid': '426f4b41-5b22-4118-b5c8-15a0ab4aa18f'}\n",
       "\n",
       "\n"
      ]
@@ -531,7 +531,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8edc333477a9499aad3507c7b9183b13",
+       "model_id": "a00abc5e8c0d4b5193159b4adacb63ea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -543,17 +543,10 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "intervention_option:  True\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 17:55:46 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 17:38:24 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -561,6 +554,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "intervention_option:  True\n",
       "Using ROC postprocessor\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__SCHL_1', 'cat__SCHL_10', 'cat__SCHL_11', 'cat__SCHL_12',\n",
       "       'cat__SCHL_13', 'cat__SCHL_14', 'cat__SCHL_15', 'cat__SCHL_16',\n",
@@ -568,7 +562,7 @@
       "       ...\n",
       "       'cat__RELP_3', 'cat__RELP_4', 'cat__RELP_5', 'cat__RELP_6',\n",
       "       'cat__RELP_7', 'cat__RELP_8', 'cat__RELP_9', 'num__AGEP', 'num__WKHP',\n",
-      "       'RACE'],\n",
+      "       'SEX&RAC1P_binary'],\n",
       "      dtype='object', length=724)\n",
       "Top indexes of an X_test in the current base flow dataset:  Int64Index([10155, 11689, 12599, 12193,  8678,  8217,  4670, 12087,  5235,\n",
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
@@ -578,8 +572,8 @@
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
       "             8665,  6253],\n",
       "           dtype='int64')\n",
-      "2024/01/04, 17:55:46: Tuning RandomForestClassifier...\n",
-      "2024/01/04, 18:02:39: Tuning for RandomForestClassifier is finished [F1 score = 0.7769660236683001, Accuracy = 0.8056888888888888]\n",
+      "2024/01/05, 17:38:24: Tuning RandomForestClassifier...\n",
+      "2024/01/05, 17:45:05: Tuning for RandomForestClassifier is finished [F1 score = 0.7796237075188269, Accuracy = 0.807111111111111]\n",
       "\n"
      ]
     },
@@ -587,14 +581,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 18:02:39 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2024-01-05 17:45:05 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39ba9e9e54504475a22d876fb32822bd",
+       "model_id": "ffad2abb5bb04291a2d90065ec26faa4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -615,7 +609,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19027a2f1520403086451a323f263846",
+       "model_id": "85d6621d220747ffa5b4a975eaebdbb8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -647,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fe7c96e",
+   "id": "c53eecb0",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -656,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4ae233d7",
+   "id": "e9462ed0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,6 +658,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__224505.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -680,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "db39bc8a",
+   "id": "c64a15b6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:14.888610Z",
@@ -1036,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8369692",
+   "id": "3450fe20",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1045,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "84e11e34",
+   "id": "db05fd49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,6 +1048,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__224505.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1069,7 +1065,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70f71f54",
+   "id": "5f53e704",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:19.039982Z",
@@ -1425,7 +1421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "614f2bb1",
+   "id": "637f565c",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1434,7 +1430,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "82e2160f",
+   "id": "1619f9ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1442,6 +1438,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__224505.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1458,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "62a81a29",
+   "id": "c4861032",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:24.538103Z",
@@ -1486,7 +1483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e0fae2d",
+   "id": "18a64e3b",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1495,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "3f8d4450",
+   "id": "3ae2bda8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1503,6 +1500,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__224505.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1519,7 +1517,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "496755ea",
+   "id": "b3e52d6f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:29.050787Z",
@@ -1547,7 +1545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "186917c7",
+   "id": "a4afe870",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1556,7 +1554,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "bcd2d13c",
+   "id": "7b69b933",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1564,6 +1562,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__224505.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1580,7 +1579,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c4972652",
+   "id": "83f29f66",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:33.438196Z",
@@ -1937,7 +1936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72cdd60f",
+   "id": "7350b087",
    "metadata": {},
    "outputs": [],
    "source": []
