--- a/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_pubcov/ACS_PubCov_Batch1-Copy2.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_pubcov/ACS_PubCov_Batch1-Copy2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d45f1de0",
+   "id": "c2798d9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "02610a30",
+   "id": "476098bf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:35:19.738404Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3075d609",
+   "id": "5c9e2c4e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:35:37.942410Z",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b8571357",
+   "id": "fb5b2438",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:32.626797Z",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3fe0a67b",
+   "id": "37cbf155",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:32.632181Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f35f9011",
+   "id": "b14c6faf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:32.642020Z",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fe19340",
+   "id": "adf93429",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a0e40a56",
+   "id": "187a51ee",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:35.335196Z",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84781ac6",
+   "id": "b4619532",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2936b8cc",
+   "id": "62db7492",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:35.358215Z",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6045a93e",
+   "id": "fe09b5fe",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "71df1f93",
+   "id": "5d952cc8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:36.349633Z",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "145b3d38",
+   "id": "857f5041",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:36.680012Z",
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1461e651",
+   "id": "97cb8eaa",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:46.039502Z",
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c22d3157",
+   "id": "492b1c7d",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ffffcc2e",
+   "id": "0665d004",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:53.416248Z",
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6ff79a84",
+   "id": "3e2a83a2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:54.127684Z",
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78404ce3",
+   "id": "05eb9a37",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "552f5c2e",
+   "id": "8bff3c78",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "08bf0d52",
+   "id": "7a2d5a38",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:55.711376Z",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "362d1d73",
+   "id": "b84a3edd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:55.914187Z",
@@ -553,14 +553,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a4f36e4",
+   "id": "de81a14a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:29:59.790418Z",
@@ -572,7 +572,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:06:39 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 17:42:40 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -592,7 +592,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a13c374e4aea482fae4d823928134476",
+       "model_id": "618e85f7aa814bf5bacdb86f95767bda",
        "version_major": 2,
        "version_minor": 0
       },
@@ -607,7 +607,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:06:39 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 17:42:40 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -644,8 +644,8 @@
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
       "             8665,  6253],\n",
       "           dtype='int64')\n",
-      "2024/01/05, 15:06:39: Tuning LogisticRegression...\n",
-      "2024/01/05, 15:06:42: Tuning for LogisticRegression is finished [F1 score = 0.6461054962457752, Accuracy = 0.7001777777777778]\n",
+      "2024/01/05, 17:42:40: Tuning RandomForestClassifier...\n",
+      "2024/01/05, 17:44:48: Tuning for RandomForestClassifier is finished [F1 score = 0.6595474712978125, Accuracy = 0.7042666666666667]\n",
       "\n"
      ]
     },
@@ -653,14 +653,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:06:42 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2024-01-05 17:44:48 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44116c6d68ca4f41bb5c9675f70e0322",
+       "model_id": "c06ed65bd99b43dab84849e67868f321",
        "version_major": 2,
        "version_minor": 0
       },
@@ -681,7 +681,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ddc00061d8642b29895640219668f7a",
+       "model_id": "c0f78f2c83e145aa9b5627eab23bae53",
        "version_major": 2,
        "version_minor": 0
       },
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8fe3bb7",
+   "id": "2c03033c",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "326c2d29",
+   "id": "f995ae37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -740,14 +740,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17f76351",
+   "id": "216d256b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:14.888610Z",
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94ba0cb9",
+   "id": "838f1cae",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "642f2e93",
+   "id": "aedbabf6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +792,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -802,14 +802,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "ba8c7dff",
+   "execution_count": null,
+   "id": "43f92b2f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:19.039982Z",
@@ -821,7 +821,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:10:35 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 17:54:49 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -841,7 +841,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f083979dcff6424b81609b7ad9f3c076",
+       "model_id": "23bb3da8e0a0408582d96b9f8c8fb47d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -856,9 +856,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:10:35 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 17:54:49 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n",
-      "2024-01-05 15:10:35 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "2024-01-05 17:54:49 experiment_interface.py INFO    : Models config is loaded from the input file\n",
       "INFO:root:Models config is loaded from the input file\n"
      ]
     },
@@ -895,14 +895,14 @@
       "            12168,  6957,  9083, 14260,  5349,  7879,  3078, 10032, 13643,\n",
       "            12025,  7489],\n",
       "           dtype='int64')\n",
-      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/ROC/ROC_acs_pubcov/tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv\n",
-      "LogisticRegression:  {'C': 1, 'class_weight': None, 'dual': False, 'fit_intercept': True, 'intercept_scaling': 1, 'l1_ratio': None, 'max_iter': 1000, 'multi_class': 'auto', 'n_jobs': None, 'penalty': 'l2', 'random_state': 300, 'solver': 'newton-cg', 'tol': 0.0001, 'verbose': 0, 'warm_start': False}\n"
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/ROC/ROC_acs_pubcov/tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv\n",
+      "RandomForestClassifier:  {'bootstrap': True, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 40, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 100, 'n_jobs': None, 'oob_score': False, 'random_state': 300, 'verbose': 0, 'warm_start': False}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5732e4fcc2ee4a53a0245b85c5bd4c46",
+       "model_id": "1124c6f156284714b6c3fb31c15f93a7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -923,7 +923,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08c6cd0bf54243d5a9bc249e042243fa",
+       "model_id": "1f801c6271504145a3d9d90c8f5f3eee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e12a61ed",
+   "id": "3abab689",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -964,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "9832c789",
+   "id": "52d00416",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +972,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -982,14 +982,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "be3cefb3",
+   "id": "30983eed",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:24.538103Z",
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "820f768b",
+   "id": "107737a6",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1026,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "34d79c47",
+   "id": "351a21c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1034,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1044,14 +1044,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dd4343c2",
+   "id": "10f88ab1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:29.050787Z",
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "601af781",
+   "id": "4626bdfa",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1088,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f1fa4956",
+   "id": "ac071376",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,7 +1096,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1106,14 +1106,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f11534dc",
+   "id": "7535e317",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:33.438196Z",
@@ -1142,7 +1142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be80217a",
+   "id": "4886142a",
    "metadata": {},
    "outputs": [],
    "source": []
