--- a/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_pubcov/ACS_PubCov_Batch1-Copy3.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_pubcov/ACS_PubCov_Batch1-Copy3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f3141a7b",
+   "id": "00ecc328",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c95bee69",
+   "id": "ee7f7eb9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:35:19.738404Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "32344837",
+   "id": "d4fcc6e6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:35:37.942410Z",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "51c714e4",
+   "id": "4368f37a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:32.626797Z",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "02a07fb7",
+   "id": "777170da",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:32.632181Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ada076e2",
+   "id": "f3c8b675",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:32.642020Z",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39186e2d",
+   "id": "a9eb7ed7",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a4ddd17b",
+   "id": "8025f816",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:35.335196Z",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "899b657a",
+   "id": "63561aa8",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "531d2694",
+   "id": "87b3c9b9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:35.358215Z",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c910f41",
+   "id": "d12a9f85",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2546091b",
+   "id": "31e18cb9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:36.349633Z",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cdd45d52",
+   "id": "a60a4f01",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:36.680012Z",
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e354de1f",
+   "id": "3580f613",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:46.039502Z",
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26d55526",
+   "id": "2bf3e7e3",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "459a3098",
+   "id": "abb8065f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:53.416248Z",
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "af1c7e27",
+   "id": "f1a938d7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:54.127684Z",
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9a5b068",
+   "id": "c75da18d",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a723bf9",
+   "id": "0cd4d171",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7579f910",
+   "id": "131d7d1b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:55.711376Z",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "283fc14d",
+   "id": "475021b4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:55.914187Z",
@@ -553,14 +553,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee5a7631",
+   "id": "b5e9f876",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:29:59.790418Z",
@@ -572,7 +572,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:06:39 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 17:42:40 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -592,7 +592,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a13c374e4aea482fae4d823928134476",
+       "model_id": "618e85f7aa814bf5bacdb86f95767bda",
        "version_major": 2,
        "version_minor": 0
       },
@@ -607,7 +607,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:06:39 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 17:42:40 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -644,8 +644,8 @@
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
       "             8665,  6253],\n",
       "           dtype='int64')\n",
-      "2024/01/05, 15:06:39: Tuning LogisticRegression...\n",
-      "2024/01/05, 15:06:42: Tuning for LogisticRegression is finished [F1 score = 0.6461054962457752, Accuracy = 0.7001777777777778]\n",
+      "2024/01/05, 17:42:40: Tuning RandomForestClassifier...\n",
+      "2024/01/05, 17:44:48: Tuning for RandomForestClassifier is finished [F1 score = 0.6595474712978125, Accuracy = 0.7042666666666667]\n",
       "\n"
      ]
     },
@@ -653,14 +653,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:06:42 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2024-01-05 17:44:48 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44116c6d68ca4f41bb5c9675f70e0322",
+       "model_id": "c06ed65bd99b43dab84849e67868f321",
        "version_major": 2,
        "version_minor": 0
       },
@@ -681,7 +681,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ddc00061d8642b29895640219668f7a",
+       "model_id": "c0f78f2c83e145aa9b5627eab23bae53",
        "version_major": 2,
        "version_minor": 0
       },
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45611254",
+   "id": "96214e72",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d83d361",
+   "id": "e2d6d831",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -740,14 +740,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47813421",
+   "id": "873d8a38",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:14.888610Z",
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5716064a",
+   "id": "31d9e1af",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "cba8d900",
+   "id": "9077b56a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +792,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -802,14 +802,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bf1719db",
+   "id": "e72e0f42",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:19.039982Z",
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33df0e28",
+   "id": "d9ba1420",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -846,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "37d3461b",
+   "id": "29dc3a45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +854,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -864,14 +864,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7169f475",
+   "id": "ec6c85ed",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:24.538103Z",
@@ -883,7 +883,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:10:57 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 17:55:11 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -903,7 +903,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a329a1c1bb934403a5461701345b55ec",
+       "model_id": "5b43a1f8a85045d5812e952e7a566216",
        "version_major": 2,
        "version_minor": 0
       },
@@ -918,9 +918,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:10:57 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 17:55:11 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n",
-      "2024-01-05 15:10:57 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "2024-01-05 17:55:11 experiment_interface.py INFO    : Models config is loaded from the input file\n",
       "INFO:root:Models config is loaded from the input file\n"
      ]
     },
@@ -957,14 +957,14 @@
       "            14802,  8634, 10336,  1486, 14287,  8890,  5961, 10137, 14550,\n",
       "            14981, 11017],\n",
       "           dtype='int64')\n",
-      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/ROC/ROC_acs_pubcov/tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv\n",
-      "LogisticRegression:  {'C': 1, 'class_weight': None, 'dual': False, 'fit_intercept': True, 'intercept_scaling': 1, 'l1_ratio': None, 'max_iter': 1000, 'multi_class': 'auto', 'n_jobs': None, 'penalty': 'l2', 'random_state': 400, 'solver': 'newton-cg', 'tol': 0.0001, 'verbose': 0, 'warm_start': False}\n"
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/ROC/ROC_acs_pubcov/tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv\n",
+      "RandomForestClassifier:  {'bootstrap': True, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 40, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 100, 'n_jobs': None, 'oob_score': False, 'random_state': 400, 'verbose': 0, 'warm_start': False}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13d4764c57414b73b795e45790468346",
+       "model_id": "eb7246d2d11c47c2b8a5efeb85b9e439",
        "version_major": 2,
        "version_minor": 0
       },
@@ -985,7 +985,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c85df4ec291c458c9e5cf82bedc1d5d8",
+       "model_id": "7b10e1e61e0c49e5a662f54b2a66fa8d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73c8b5d1",
+   "id": "ba42cf75",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1026,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "aaf95580",
+   "id": "f230ed06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1034,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1044,14 +1044,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f3a04c4c",
+   "id": "6c79f0b0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:29.050787Z",
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e6d3f40",
+   "id": "197e66dc",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1088,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "003c15f2",
+   "id": "a510d912",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,7 +1096,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__200642.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__224448.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1106,14 +1106,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "08078203",
+   "id": "c2b1a41f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:33.438196Z",
@@ -1142,7 +1142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d514ff06",
+   "id": "059c3e60",
    "metadata": {},
    "outputs": [],
    "source": []
