--- a/notebooks/diff_fairness_interventions_exp/ROC/ROC_law_school/Law_School_Batch1.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/ROC/ROC_law_school/Law_School_Batch1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9984d5f9",
+   "id": "06332f96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4593cc13",
+   "id": "57aa383f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:06:47.913158Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "eef595a1",
+   "id": "bd76b84c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:07:04.695699Z",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2ff6e85c",
+   "id": "0e4753d9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:59:53.076626Z",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5f917ca9",
+   "id": "0321c7cd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:59:53.086356Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "22a62777",
+   "id": "604e8ea6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:59:53.096469Z",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbc2aec5",
+   "id": "95e79b6b",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "40c9fe64",
+   "id": "f5291ad3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:59:54.178205Z",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bbf24d8",
+   "id": "37a7e612",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5b60c482",
+   "id": "6a1f671c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:59:54.200774Z",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1412c4d",
+   "id": "0c7bba9a",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "924b2824",
+   "id": "f5f6d2b6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:59:54.224287Z",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2dd5c5b3",
+   "id": "9cb5c31e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:59:54.669988Z",
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8b35fa39",
+   "id": "7fcb51e0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:59:55.345538Z",
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d09f8a5",
+   "id": "3959eb20",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d5502861",
+   "id": "3d4ad53a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:59:55.874220Z",
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "adbf87d7",
+   "id": "f025644f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:59:56.735496Z",
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4393fd6f",
+   "id": "13fbb9c1",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c5cd574",
+   "id": "e7718606",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c02a4866",
+   "id": "9e422bde",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:59:58.076259Z",
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "529216e7",
+   "id": "acde0198",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:59:58.373690Z",
@@ -504,14 +504,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91e56f2d",
+   "id": "fc68d52e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T16:16:33.531233Z",
@@ -523,7 +523,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:18:37 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 18:01:54 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -543,7 +543,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97cfa5ae48e24902a2797de0b38ab73d",
+       "model_id": "fc1a280ec74a48c7ac7e3ed7c14ca515",
        "version_major": 2,
        "version_minor": 0
       },
@@ -555,10 +555,17 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_option:  True\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:18:37 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 18:01:55 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -566,7 +573,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_option:  True\n",
       "Using ROC postprocessor\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__fulltime_1.0', 'cat__fulltime_2.0', 'cat__fam_inc_1.0',\n",
       "       'cat__fam_inc_2.0', 'cat__fam_inc_3.0', 'cat__fam_inc_4.0',\n",
@@ -583,8 +589,8 @@
       "            18446,  6938,  3450,  9375, 19994, 16100,  4401,   142, 15143,\n",
       "             2188,  4332],\n",
       "           dtype='int64')\n",
-      "2024/01/05, 15:18:37: Tuning LogisticRegression...\n",
-      "2024/01/05, 15:18:39: Tuning for LogisticRegression is finished [F1 score = 0.6574063490492756, Accuracy = 0.9020386810086753]\n",
+      "2024/01/05, 18:01:55: Tuning RandomForestClassifier...\n",
+      "2024/01/05, 18:04:15: Tuning for RandomForestClassifier is finished [F1 score = 0.6541877750711986, Accuracy = 0.8917808651565143]\n",
       "\n"
      ]
     },
@@ -592,14 +598,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-05 15:18:39 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2024-01-05 18:04:15 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e1f96e112b840298685473654edc474",
+       "model_id": "bbf7b31881c34a7593891f7a86dec1dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -620,7 +626,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d3f0e3b1cda496797ad661e1ba34f7c",
+       "model_id": "ec76947d86344e30aece287f8efbf9bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -652,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93b9b908",
+   "id": "ca143464",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -661,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35d48ff1",
+   "id": "2c5a24e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +675,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_20240105__201839.csv'\n",
+    "    'tuning_results_Law_School_20240105__230415.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -679,14 +685,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fac211a",
+   "id": "a0e3a530",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:14.888610Z",
@@ -714,7 +720,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3d0583f",
+   "id": "dfa650a4",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -723,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "13865f8e",
+   "id": "d1d1bd68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +737,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_20240105__201839.csv'\n",
+    "    'tuning_results_Law_School_20240105__230415.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -741,14 +747,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8a61a319",
+   "id": "c175a41b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:19.039982Z",
@@ -776,7 +782,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b70caede",
+   "id": "a7ac0dc9",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -785,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "68aa546e",
+   "id": "defd1c5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +799,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_20240105__201839.csv'\n",
+    "    'tuning_results_Law_School_20240105__230415.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -803,14 +809,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ca06b468",
+   "id": "c77519bd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:24.538103Z",
@@ -838,7 +844,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7304dbf",
+   "id": "15ecb73a",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -847,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c36f6d7a",
+   "id": "30931f18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +861,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_20240105__201839.csv'\n",
+    "    'tuning_results_Law_School_20240105__230415.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -865,14 +871,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "38a8c3d8",
+   "id": "d5109e0e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:29.050787Z",
@@ -900,7 +906,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03355767",
+   "id": "51fe74bf",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -909,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "c90c7ccd",
+   "id": "aaaef66a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +923,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_20240105__201839.csv'\n",
+    "    'tuning_results_Law_School_20240105__230415.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -927,14 +933,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d264d473",
+   "id": "fcbb655b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:33.438196Z",
@@ -963,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7979022",
+   "id": "a5dcc901",
    "metadata": {},
    "outputs": [],
    "source": []
